04-projects-showcase/02-iac-infrastructure-provisioning/terraform/parts/security_groups/10-redis-cache-sg.tf
# 10. Redis Cache Security Group
# Allows traffic from the application on the Redis port.

resource "aws_security_group" "redis_sg" {
  name        = "redis-cache-sg"
  description = "Allows Redis traffic from App SG"
  vpc_id      = var.vpc_id

  ingress {
    from_port       = 6379
    to_port         = 6379
    protocol        = "tcp"
    security_groups = [aws_security_group.app_sg.id]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "Redis-Cache-SG"
  }
}
