04-projects-showcase/02-iac-infrastructure-provisioning/terraform/parts/security_groups/01-web-server-sg.tf
# 01. Web Server Security Group
# Allows public HTTP and HTTPS traffic.

resource "aws_security_group" "web_sg" {
  name        = "web-server-sg"
  description = "Allows HTTP and HTTPS traffic from the internet"
  vpc_id      = var.vpc_id

  ingress {
    description = "Allow HTTP"
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    description = "Allow HTTPS"
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "Web-Server-SG"
  }
}
